fix(ui): FlexStack - use margin-right for gap

--- a/packages/ui/src/layout/flex-stack/flex-stack.module.css
+++ b/packages/ui/src/layout/flex-stack/flex-stack.module.css
@@ -4,42 +4,42 @@
   justify-content: flex-start;
 }
 
-.item {
-  margin: 0;
+.root > .item:last-child {
+  margin-right: 0;
 }
 
-.space--xxxsmall > .item + .item {
-  margin-left: var(--space-xxxsmall);
+.space--xxxsmall > .item {
+  margin: 0 var(--space-xxxsmall) 0 0;
 }
 
-.space--xxsmall > .item + .item {
-  margin-left: var(--space-xxsmall);
+.space--xxsmall > .item {
+  margin: 0 var(--space-xxsmall) 0 0;
 }
 
-.space--xsmall > .item + .item {
-  margin-left: var(--space-xsmall);
+.space--xsmall > .item {
+  margin: 0 var(--space-xsmall) 0 0;
 }
 
-.space--small > .item + .item {
-  margin-left: var(--space-small);
+.space--small > .item {
+  margin: 0 var(--space-small) 0 0;
 }
 
-.space--medium > .item + .item {
-  margin-left: var(--space-medium);
+.space--medium > .item {
+  margin: 0 var(--space-medium) 0 0;
 }
 
-.space--large > .item + .item {
-  margin-left: var(--space-large);
+.space--large > .item {
+  margin: 0 var(--space-large) 0 0;
 }
 
-.space--xlarge > .item + .item {
-  margin-left: var(--space-xlarge);
+.space--xlarge > .item {
+  margin: 0 var(--space-xlarge) 0 0;
 }
 
-.space--xxlarge > .item + .item {
-  margin-left: var(--space-xxlarge);
+.space--xxlarge > .item {
+  margin: 0 var(--space-xxlarge) 0 0;
 }
 
-.space--xxxlarge > .item + .item {
-  margin-left: var(--space-xxxlarge);
+.space--xxxlarge > .item {
+  margin: 0 var(--space-xxxlarge) 0 0;
 }
